# stablize_CRAG

./: .gitignore  CLAUDE.md  crag.py  make_figures.py  proposal_20260618.md  pyproject.toml  run_study.py
_archive/: Paper_Review_Tool_Intent_Stabilization.md  paper-review_streaming-tool-use.md
docs/: PROPOSAL.md  PROPOSAL_2.md  STUDY.md  paper_2_proposal.md
docs/superpowers/plans/: 2026-06-20-component-a-trigger.md  2026-06-21-second-benchmark-hotpotqa.md  2026-06-22-paper1-v2-reframe.md
docs/superpowers/specs/: 2026-06-20-component-a-trigger-design.md  2026-06-20-second-benchmark-generalization-design.md  2026-06-22-paper1-v2-reframe-design.md
experiments/: audit_labels.py  benchmark_stats.py  benchmarks.py  compare_retrievers.py  crag.py  dense.py  global_corpus.py  global_headroom.py  grounding_precision.py  make_figures.py  make_fixture.py  run_study.py  stabilization.py  stats.py  streaming_rag.py  train_trigger.py  trigger_features.py
paper/: main.tex  refs.bib  results.tex
results/: clean_test.csv  clean_train.csv  grounding_audit.split0.csv  grounding_precision.split0.csv  grounding_precision.summary.json  label_audit.csv  latency.dense.csv  latency.split0.csv  latency.split0.dense.csv  latency_k3.csv  latency_k3_L1000.csv  latency_k3_sc.csv  latency_validation.csv  rq4_stats.json  stab_k1.csv  stab_k1.summary.json  stab_k3.csv  stab_k3.summary.json  stab_k3_L1000.summary.json  stab_k3_fuzzy.csv  stab_k3_fuzzy.summary.json  stab_k3_scpop.csv  stab_k3_scpop.summary.json  stab_k5.csv  stab_k5.summary.json  stabilization.csv  stabilization.dense.csv  stabilization.dense.summary.json  stabilization.split0.csv  stabilization.split0.dense.csv  stabilization.split0.dense.summary.json  stabilization.split0.summary.json  stabilization.summary.json  trigger.clean.summary.json  trigger.summary.json  trigger_features.split0.csv  trigger_features.split1.csv
results/global/: nq_tsuf.1m.csv  nq_tsuf.1m.summary.json  nq_tsuf.sub.csv  nq_tsuf.sub.summary.json
results/global/confirm/: fiqa_bm25.csv  fiqa_bm25.summary.json  fiqa_bm25_10k.csv  fiqa_bm25_10k.summary.json  fiqa_dense_10k.csv  fiqa_dense_10k.summary.json  nq_bm25_1000.csv  nq_bm25_1000.summary.json  nq_bm25_10000.csv  nq_bm25_10000.summary.json  nq_bm25_100000.csv  nq_bm25_50000.csv
results/global/headroom/: fiqa_full.json  nq_1m.json  perq_crag.json
results/hotpotqa/: dual_stab.csv  dual_stab.summary.json  trigger.summary.json
results/hotpotqa_k1/: trigger.summary.json
tests/: conftest.py  test_audit_labels.py  test_benchmark_stats.py  test_benchmarks.py  test_global_corpus.py  test_global_headroom.py  test_prefix_records.py  test_train_trigger.py  test_trigger_features.py
