[project]
name = "stabilize-crag"
version = "0.1.0"
description = "Tool-intent stabilization study on CRAG (RQ1-RQ4); see PROPOSAL.md"
requires-python = ">=3.10"
# Core run is pure stdlib + the vendored streaming_rag.py harness — no runtime deps.
dependencies = []

[project.optional-dependencies]
# Cleaner HTML extraction than the stdlib HTMLParser fallback in crag.html_to_text.
html = ["beautifulsoup4>=4.12"]
# Enables run_study.py --plot (phi distribution histogram).
plot = ["matplotlib>=3.8"]
# Dense-retriever condition (H4 / PROPOSAL_2 Phase 1): run_study.py --retriever dense.
# Pulls torch + transformers transitively; CPU inference is sufficient.
dense = ["sentence-transformers>=2.3"]
# RQ4 inferential statistics (paper Sec. 5.2): experiments/stats.py — Kruskal--Wallis,
# epsilon^2, Dunn/Holm post-hoc, and the seeded bootstrap CIs behind the by-type figure.
stats = ["numpy>=1.24", "scipy>=1.10"]
# Component A classifier trigger (experiments/trigger_features.py, train_trigger.py):
# scikit-learn models, spaCy NER (run `python -m spacy download en_core_web_sm`), numpy.
trigger = ["scikit-learn>=1.3", "spacy>=3.7", "numpy>=1.24"]
# Second-benchmark generalization (experiments/benchmarks.py): HuggingFace datasets.
bench = ["datasets>=2.20"]
# Test runner (no production code depends on it).
dev = ["pytest>=8.0"]
# Convenience: everything optional that the current pipeline can use.
all = ["beautifulsoup4>=4.12", "matplotlib>=3.8", "sentence-transformers>=2.3",
       "numpy>=1.24", "scipy>=1.10"]

# NOT YET WIRED (see PROPOSAL.md §5/§7): the RQ4 phi-on-features regression (the
# explanatory model) would add e.g. statsmodels/scikit-learn. The RQ4 significance
# tests themselves are wired — see experiments/stats.py under the [stats] extra.

[tool.pytest.ini_options]
pythonpath = ["experiments"]
testpaths = ["tests"]

[tool.uv]
package = false
